# covscraper

./: .gitignore  README.md  UserSonictoCSV.py  auth.py  clearing.py  codioanontosid.py  codiodelete.py  codioreport.py  codiousers.py  downloadMoodle.py  engagedevel.py  engagementui.py  find_sid.py  findroom.py  get_list_of_all_modules_on_moodle.py  icsgen.py  kualiui.py  moodleui.py  personaltutoremail.py  picssheet.py  pyproject.toml  requirements.txt  rooms.py  staff_lookup.py  studentapi.py  timetable.py  timetableapi.py  timetableui.py  who.py
aula/: __init__.py  email2id.py
codioscraper/: __init__.py
covscraper/: __init__.py  aulaapi.py  auth.py  engagementapi.py  kualiapi.py  moodleapi.py  rooms.py  studentapi.py  temp.py  test.html  timetableapi.py  universeapi.py
