[tool.poetry]
name = "covscraper"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytz = "^2022.7.1"
ics = "^0.7.2"
openpyxl = "^3.1.1"
exchangelib = "^4.9.0"
jinja2 = "^3.1.2"
bs4 = "^0.0.1"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.12.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
